--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
   <link rel="stylesheet" href="/static/css/style.css" />
   <link rel="icon" href="/static/favicon.svg" type="image/svg+xml" />
+  <link rel="manifest" href="/static/manifest.webmanifest" />
+  <meta name="theme-color" content="#7c5cff" />
 </head>
 <body>
   <div id="app"></div>
@@ -20,6 +22,18 @@
     <div style="padding:16px; font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial;">Для работы Pariter нужен JavaScript.</div>
   </noscript>
 
+  <script>
+    // PWA: service worker (best-effort)
+    (function(){
+      try {
+        if ('serviceWorker' in navigator) {
+          window.addEventListener('load', function(){
+            navigator.serviceWorker.register('/static/sw.js').catch(function(){});
+          });
+        }
+      } catch {}
+    })();
+  </script>
   <script type="module" src="/static/js/app.js"></script>
 </body>
 </html>
