--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       try {
         if ('serviceWorker' in navigator) {
           window.addEventListener('load', function(){
-            navigator.serviceWorker.register('/static/sw.js', { scope: '/' }).catch(function(){});
+            navigator.serviceWorker.register('/sw.js', { scope: '/' }).catch(function(){});
           });
         }
       } catch {}
