--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>✦ PARITER ✦</title>
   <meta name="description" content="Pariter — вместе, наравне, вперёд. Совместный дневник личностного роста." />
 
-      <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+  <!-- (Платформенное требование) Tailwind CDN подключён, но приложение не зависит от Tailwind. -->
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
   <link rel="stylesheet" href="/static/css/style.css" />
   <link rel="icon" href="/static/favicon.svg" type="image/svg+xml" />
@@ -22,7 +23,8 @@
   </noscript>
 
   <script>
-      (function(){
+    // PWA: service worker (best-effort)
+    (function(){
       try {
         if ('serviceWorker' in navigator) {
           window.addEventListener('load', function(){
